--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Backend for Techblitz registration using Node.js and Firebase",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+   "scripts": {
+    "dev": "vercel dev"
   },
   "engines": {
   "node": "18.x"
@@ -15,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+     "@google-cloud/firestore": "^7.9.2",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0"
